# course-tracker

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.requestor.yaml  docker-compose.yml  pyproject.toml  setup.cfg  tasks.py
alembic/: env.py
alembic/versions/: 0001_init_migration.py
app/core/db/: session.py
app/db/: base.py
app/db/crud/: base.py  course.py
app/db/models/: __init__.py  course.py
app/factories/: course.py
app/serializers/: course.py
app/utils/: backend_pre_start.py
backend/: alembic.ini  locustfile.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_model.py
backend/app/: main.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: course.py
backend/app/db/: base.py  session.py  utils.py
backend/app/db/crud/: __init__.py  course.py
backend/app/db/models/: __init__.py  base_class.py
backend/app/factories/: __init__.py  course.py  db_session.py
backend/app/serializers/: course.py
backend/app/tests/: conftest.py
backend/app/tests/api/api_v1/: test_course.py
backend/app/tests/crud/: test_course.py
cripto_requestor_app/: Dockerfile
cripto_requestor_app/receiver/: custom_types.py  main.py  requirements.txt
cripto_requestor_app/scheduler/: custom_types.py  main.py
cripto_requestor_app/worker/: custom_types.py  main.py  requirements.txt
settings/: config.py
